# project_m101

./: README.md  docker-compose.yml  eslint.config.cjs
.github/workflows/: dash-lint.yml  eslint.yml  rust-checks.yml
dash/: .eslintrc.json  Dockerfile  README.md  backend-server.js  backend-server.ts  cityflow-dashboard.html  dashboard.ts  docker-compose.yml  eslint.config.cjs  eslint.config.js  eslint.config.mjs  init-db.sql  package-lock.json  package.json  start.sh  tsconfig.dashboard.json  tsconfig.json
dash/src/: backend-server.ts  cityflow-dashboard.css  cityflow-dashboard.html  dashboard.ts
db/: README.md  docker-compose.yml
iot/: .env  .gitignore  Cargo.toml  docker-compose.yaml  flake.nix  mprocs.yaml  rust-toolchain.toml  slumber.yml
iot/.cargo/: config.toml
iot/aggregator/: Cargo.toml  Dockerfile
iot/aggregator/.sqlx/: query-67cc60cde9f95a543d49f2bfa517b0261d9dc3c157d181e18a8eaf0e162d166c.json
iot/aggregator/src/: db.rs  main.rs
iot/aggregator/src/jams/: mod.rs
iot/aggregator/src/models/: mod.rs
iot/aggregator/src/mqtt/: mod.rs  update_one.sql
iot/aggregator/src/nodes/: mod.rs
iot/migrations/: 20260211094858_initial_setup.down.sql  20260211094858_initial_setup.up.sql
iot/sensor/: Cargo.toml  Dockerfile
iot/src/: main.rs  support.rs
moni/: README.md  docker-compose.yml
moni/alert rules/: alert-rules-1770885272637.json
moni/dash/: Postgresql_dashboard.json  vm_export_dashboard.json
moni/dashboard/: PostgreSQL Database-1770885448038.json  VM Dashboard-1770885435567.json
moni/prometheus/: prometheus.yml
(+1 files in other folders)
