[package]
name = "aggregator"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-web = "4.12.1"
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.11.8"
log = "0.4.29"
rumqttc = "0.25.1"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "postgres",
  "uuid",
  "macros",
  "chrono",
] }
tokio = { version = "1.49.0", features = ["full"] }
